--- a/.github/workflows/profile-schedule.yml
+++ b/.github/workflows/profile-schedule.yml
@@ -2,7 +2,7 @@ name: update-readme on schedule
 
 on:
   schedule:
-    - cron: '* * * * *'
+    - cron: '*/5 * * * *'
 jobs:
   read:
     runs-on: ubuntu-latest
@@ -21,4 +21,4 @@ jobs:
       - name: Commit and Push Changes
         uses: actions-js/push@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.ACTION_TOKEN }}
