--- a/.github/workflows/profile-schedule.yml
+++ b/.github/workflows/profile-schedule.yml
@@ -2,7 +2,7 @@ name: update-readme on schedule
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 */4 * * *'
 jobs:
   read:
     runs-on: ubuntu-latest
